<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarStyle="outsideInset"
    android:paddingBottom="@dimen/small_margin"
    android:paddingLeft="@dimen/dialog_margin_horizontal"
    android:paddingRight="@dimen/dialog_margin_horizontal"
    android:paddingTop="@dimen/dialog_margin_top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.drivecom.utils.RobotoMediumFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/terms_of_use_header_1"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@string/terms_of_use_text_1"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <com.drivecom.utils.RobotoMediumFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/terms_of_use_header_2"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use_text_2"
            android:layout_marginBottom="@dimen/normal_margin"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <com.drivecom.utils.RobotoMediumFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/terms_of_use_header_3"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use_text_3"
            android:layout_marginBottom="@dimen/normal_margin"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <com.drivecom.utils.RobotoMediumFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/terms_of_use_header_4"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use_text_4"
            android:layout_marginBottom="@dimen/normal_margin"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <com.drivecom.utils.RobotoMediumFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/terms_of_use_header_5"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use_text_5"
            android:layout_marginBottom="@dimen/normal_margin"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <com.drivecom.utils.RobotoMediumFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/terms_of_use_header_6"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use_text_6"
            android:layout_marginBottom="@dimen/normal_margin"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <com.drivecom.utils.RobotoMediumFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/terms_of_use_header_7"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use_text_7"
            android:layout_marginBottom="@dimen/normal_margin"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <com.drivecom.utils.RobotoMediumFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/terms_of_use_header_8"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use_text_8"
            android:layout_marginBottom="@dimen/normal_margin"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <com.drivecom.utils.RobotoMediumFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/terms_of_use_header_9"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use_text_9"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>
</ScrollView>
