<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add_24dp_menu"
        android:title="@string/menu_add_group"
        app:showAsAction="always"
        android:visible="false"
        />
    <item
        android:id="@+id/action_delete_group"
        android:orderInCategory="100"
        android:title="@string/menu_delete_group"
        android:visible="false"
        android:icon="@drawable/ic_clear_white_24dp_menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_leave_group"
        android:orderInCategory="100"
        android:title="@string/menu_leave_group"
        android:visible="false"
        android:icon="@drawable/ic_exit_to_app_white_24dp_menu"
        app:showAsAction="always" />
</menu>
