<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/large_margin"
    android:paddingLeft="@dimen/large_margin"
    android:paddingRight="@dimen/large_margin"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/initialization_login_email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel"
        android:layout_marginBottom="@dimen/very_small_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/initialization_login_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_at"
            android:drawablePadding="@dimen/small_margin"
            android:hint="@string/e_mail_address"
            android:maxLines="1"
            android:inputType="text"
            android:longClickable="false"
            android:ellipsize="end"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/initialization_login_password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/initialization_login_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="@dimen/small_margin"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:longClickable="false"
            android:ellipsize="end"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/initialization_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_big_margin"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent">

        <com.drivecom.utils.RobotoMediumFontTextView
            android:id="@+id/initialization_login_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/normal_margin"
            android:text="@string/login_button_label"
            android:textColor="@color/textDisabledDarkBackground"
            android:textSize="@dimen/big_text_size" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/initialization_login_small_register_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/normal_margin"
        android:clickable="false"
        android:clipToPadding="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent">

        <com.drivecom.utils.RobotoMediumFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/small_margin"
            android:text="@string/registering_button_label"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />
    </android.support.v7.widget.CardView>
</LinearLayout>