<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/large_margin"

    >

    <ScrollView
        android:id="@+id/initialization_registration_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/registration_scrollview_height"
        android:fadeScrollbars="false"
        android:isScrollContainer="false"
        android:overScrollMode="never"
        android:paddingLeft="@dimen/large_margin"
        android:paddingRight="44dp"
        android:scrollbarSize="@dimen/scroll_bar_size"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/very_small_margin"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/initialization_registration_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_at"
                    android:drawablePadding="@dimen/small_margin"
                    android:ellipsize="end"
                    android:hint="@string/e_mail_address"
                    android:inputType="text"
                    android:longClickable="false"
                    android:maxLines="1"
                    android:textColor="@color/textPrimaryDarkBackground"
                    android:textSize="@dimen/medium_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/very_small_margin"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/initialization_registration_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="@dimen/small_margin"
                    android:ellipsize="end"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:maxLines="1"
                    android:textColor="@color/textPrimaryDarkBackground"
                    android:textSize="@dimen/medium_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/initialization_registration_password_confirmation_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/very_small_margin"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/initialization_registration_password_confirmation_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/lock_reset"
                    android:drawablePadding="@dimen/small_margin"
                    android:ellipsize="end"
                    android:hint="@string/password_confirm"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:maxLines="1"
                    android:textColor="@color/textPrimaryDarkBackground"
                    android:textSize="@dimen/medium_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/very_small_margin"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/initialization_registration_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="@dimen/small_margin"
                    android:ellipsize="end"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:longClickable="false"
                    android:maxLines="1"
                    android:textColor="@color/textPrimaryDarkBackground"
                    android:textSize="@dimen/medium_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/initialization_registration_registration_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_car"
                    android:drawablePadding="@dimen/small_margin"
                    android:ellipsize="end"
                    android:hint="@string/registration_number"
                    android:inputType="text"
                    android:longClickable="false"
                    android:maxLines="1"
                    android:textColor="@color/textPrimaryDarkBackground"
                    android:textSize="@dimen/medium_text_size" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.CardView
        android:id="@+id/initialization_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginTop="@dimen/very_big_margin"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent">

        <com.drivecom.utils.RobotoMediumFontTextView
            android:id="@+id/initialization_register_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/normal_margin"
            android:text="@string/register_button_login"
            android:textColor="@color/textDisabledDarkBackground"
            android:textSize="@dimen/big_text_size" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/initialization_registration_small_login_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/normal_margin"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent">

        <com.drivecom.utils.RobotoMediumFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/small_margin"
            android:text="@string/logging_button_label"
            android:textColor="@color/textPrimaryDarkBackground"
            android:textSize="@dimen/medium_text_size" />
    </android.support.v7.widget.CardView>

</LinearLayout>
